==> ryanuo/cstudy/stm32/test407_windows/HARDWARE/OLED.c <==
#include "stm32f4xx.h"
#include "OLED.h"
#include <string.h>
#include <math.h>
#include <stdio.h>
#include <stdarg.h>
#define GPIO_SCL_PIN GPIO_Pin_8
#define GPIO_SDA_PIN GPIO_Pin_9
#define GPIO_OLED_PORT GPIOB

void OLED_W_SCL(uint8_t BitValue)
{
	/*根据BitValue的值，将SCL置高电平或者低电平*/
	GPIO_WriteBit(GPIO_OLED_PORT, GPIO_SCL_PIN, (BitAction)BitValue);

	OLED_I2C_Delay();

	/*如果单片机速度过快，可在此添加适量延时，以避免超出I2C通信的最大速度*/
	//...
}

void OLED_W_SDA(uint8_t BitValue)
{
	/*根据BitValue的值，将SDA置高电平或者低电平*/
	GPIO_WriteBit(GPIO_OLED_PORT, GPIO_SDA_PIN, (BitAction)BitValue);

	OLED_I2C_Delay();

	/*如果单片机速度过快，可在此添加适量延时，以避免超出I2C通信的最大速度*/
	//...
}

void OLED_GPIO_Init(void)
{
	uint32_t i, j;

	/*在初始化前，加入适量延时，待OLED供电稳定*/
	for (i = 0; i < 1000; i++)
	{
		for (j = 0; j < 1000; j++)
			;
	}

	/*将SCL和SDA引脚初始化为开漏模式*/
	RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOB, ENABLE); // 正确

	GPIO_InitTypeDef GPIO_InitStructure;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_InitStructure.GPIO_OType = GPIO_OType_OD; // 开漏由 OType 指定
	GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
	GPIO_InitStructure.GPIO_Pin = GPIO_SCL_PIN | GPIO_SDA_PIN;
	GPIO_Init(GPIO_OLED_PORT, &GPIO_InitStructure);

	/*释放SCL和SDA*/
	OLED_W_SCL(1);
	OLED_W_SDA(1);
}
